--- a/.env
+++ b/.env
@@ -20,3 +20,6 @@ DATABASE_PASSWORD=
 DATABASE_SSL=false
 DATABASE_FILENAME=.tmp/data.db
 JWT_SECRET=lTvQjd1S2H6Q05v3OvM39A==
+
+NODE_ENV=development
+DATABASE_FILENAME=.tmp/data.db
